Fix background overlay z-index

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -1250,6 +1250,7 @@ body.login-page {
     bottom:0;
     left:0;
     right:0;
+    z-index: -1;
     background:rgba(0, 0, 0, 0.42);
   }
   .main{
